--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    color: orange;
+    font-size: 100px;
 }
 body {
     background-color: black;
@@ -34,4 +36,17 @@ body > .modal {
     z-index: 1;
     background-color: white;
 
+}
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 100px;
+    
+}
+.content > #obox, #xbox, #winBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
