--- a/style.css
+++ b/style.css
@@ -1,52 +1,101 @@
 * {
-    margin: 0;
-    padding: 0;
-    color: orange;
-    font-size: 100px;
+  text-align: center;
 }
-body {
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-div {
-    border: 1px solid white;
-}
-body > .content {
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 600px 1fr;
-    grid-template-rows: 1fr 600px 1fr;
-}
-body > .content > .tikTacToe {
-    grid-row: 2;
-    grid-column: 2;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-body > .content > .xbox {
-    grid-column: 3;
-} 
-body > .modal {
-    display:block;
-    position: fixed;
-    z-index: 1;
-    background-color: white;
 
+.hide {
+  display: none !important;
 }
-.box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 100px;
-    
+
+.show {
+  display: flex !important;
 }
-.content > #obox, #xbox, #winBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.show_block {
+  display: block !important;
+}
+
+body > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.start_screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.245);
+  display: flex;
+  justify-content: center;
+  backdrop-filter: blur(10px);
+  align-items: center;
+  flex-direction: column;
+}
+
+.scoreBox {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 3rem;
+}
+
+/* Style the board */
+.board {
+  width: 40rem;
+  height: 40rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  border: 2px solid black;
+}
+
+/* Style the squares */
+.cell {
+  width: 100%;
+  height: 100%;
+  font-size: 4em;
+  text-align: center;
+  line-height: 100px;
+  border: 1px solid black;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+/* Style the X's */
+.square.x:before {
+  content: "X";
+  color: red;
+}
+
+/* Style the O's */
+.square.o:before {
+  content: "O";
+  color: blue;
+}
+
+/* Style the message */
+#message {
+  font-size: 2em;
+  text-align: center;
+  margin-top: 20px;
+}
+
+/* turn */
+
+.turn > div {
+  width: 100px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  border: 1px solid black;
+  margin-bottom: 1rem;
+}
+
+.turn_indicator {
+  background-color: black;
+  color: white;
 }
