--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ body > div {
 
 /* Style the board */
 .board {
-  width: 40rem;
-  height: 40rem;
+  width: 20rem;
+  height: 20rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -61,6 +61,9 @@ body > div {
   border: 1px solid black;
   box-sizing: border-box;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Style the X's */
@@ -86,16 +89,30 @@ body > div {
 
 .turn > div {
   width: 100px;
-  height: 60px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 3rem;
   border: 1px solid black;
   margin-bottom: 1rem;
+  padding-top: 10px;
 }
 
 .turn_indicator {
   background-color: black;
   color: white;
+}
+
+button {
+  background-color: rgb(78, 78, 255);
+  border: 1px solid black;
+}
+
+@media only screen and (min-width: 700px) {
+  .board {
+    width: 40rem;
+    height: 40rem;
+    font-size: 2rem;
+  }
 }
